fix: actions z-index

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -358,6 +358,7 @@ main {
     justify-content: flex-end;
     align-items: center;
     width: 100%;
+    z-index: 4;
 }
 
 .toggle {
